# libsonata

./: .gitmodules  CMakeLists.txt  README.rst  concretization.txt  pyproject.toml  setup.py  test.py
.github/workflows/: clang_format_check.yaml  coverage_test.yaml  docstring_check.yaml  mirror-ebrains.yml  publish-sdist-wheels.yml
ci/: check_clang_format.sh  check_generated_docstrings.sh  coverage_test.sh  hdf5-build.sh  python_build_sdist.sh  python_test.sh
include/bbp/sonata/: compartment_sets.h  config.h  selection.h
python/: CMakeLists.txt  bindings.cpp
python/libsonata/: __init__.py
python/tests/: test_compartment_sets.py  test_compartmentsets.py  test_config.py  test_nodesets.py  test_population.py
src/: compartment_sets.cpp  config.cpp  hdf5_reader.cpp  hdf5_reader.hpp  node_sets.cpp  population.hpp  report_reader.cpp  selection.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  test_compartment_sets.cpp  test_config.cpp  test_node_sets.cpp
tests/data/: compartment_sets.json
tests/data/config/: circuit_config.json  simulation_config.json
